# chip_8

./: CMakeLists.txt  README.md
lib/: base_interpreter.hpp  base_render.hpp  command_executor.hpp  fonts.hpp  framebuffer.hpp  functions.hpp  instruction.hpp  interpreter.hpp
src/: application.hpp  main.cpp  render.hpp
